[package]
name = "aloha_protocol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "server"
path = "src/server/bin/main.rs"

[[bin]]
name = "client"
path = "src/client/bin/main.rs"

[[bin]]
name = "bridge"
path = "src/bridge/bin/main.rs"

[dependencies.pnet]
version = "0.34.0"

[dependencies]
rand = "0.7"
